@startuml
hide circle
hide method
left to right direction

class Anagrafica {
  **id** <<PK>>
  nome
  cognome
  denominazione
  luogoNascita
  dataNascita
  CodiceFiscale
  PartitaIVA
  comune
  indirizzo
  civico
  email
  pec
  telefono
}

class Gestore {
  //**idAnagrafica**// <<PK, FK>>
  scadenzaContratto
}

class Produttore {
  //**idAnagrafica**// <<PK, FK>>
  scadenzaContratto
}

class Prodotto {
  **id** <<PK>>
  //idProduttore// <<FK>>
  descrizione
}

Produttore "1" -- "n" Prodotto

Gestore "0..1" .. "1" Anagrafica
Produttore"0..1" .. "1" Anagrafica

class Negozio {
  **id** <<PK>>
  //idGestore// <<FK>>
  comune
  indirizzo
  civico
}

class CategoriaMerceologica {
  **id** <<PK>>
  categoria
}

class Modalita {
  **id** <<PK>>
  modalita
}

class SpazioEspositivo {
  **id** <<PK>>
  //idNegozio// <<FK>>
  //idModalita// <<FK>>
  denominazione
  locale
  descrizione
  condizioni
  estensioneInMetri2
  costoGiornaliero
}

class NegozioCategoria {
  //**idNegozio**// <<PK, FK>>
  //**idCategoria**// <<PK, FK>>
}

Gestore "1" -- "n" Negozio : dispone >

Negozio "1" -- "n" NegozioCategoria
NegozioCategoria "n" -- "1" CategoriaMerceologica

SpazioEspositivo "n" -- "1" Modalita : utilizzo >

class Calendario {
  **id** <<PK>>
  //idSpazioEspositivo// <<FK>>
  nome
  organizzatore
  descrizione
}

class Evento {
  **id** <<PK>>
  //idCalendario// <<FK>>
  //idProdotto// <<FK>>
  titolo
  descrizione
  inizio
  fine
  luogo
  stato
}

Evento "n" -- "1" Calendario : occupazione <

SpazioEspositivo "1" -- "n" Calendario

Evento "n" -- "1" Prodotto : esposizione
@enduml
